modify api getInstitutionUsers to add optional filters
