# apps/user-ms/src/main/docs/openapi.yaml
@@ -394,6 +394,22 @@ paths:
         required: true
         schema:
           type: string
+      - name: products
+        in: query
+        schema:
+          type: array
+          items:
+            type: string
+      - name: roles
+        in: query
+        schema:
+          type: array
+          items:
+            type: string
+      - name: userId
+        in: query
+        schema:
+          type: string
       responses:
         "200":
           description: OK
